--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,21 +1,115 @@
-name: build
-on: push
+name: release
+on:
+  # Enable manual run
+  workflow_dispatch:
+  # Refs/tags push events to matching v*, i.e. v1.0, v20.15.10
+  push:
+    tags:
+      - "v*"
+
 jobs:
-  build-apk:
+  generate-changelog:
+    name: Generate changelog
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - name: Get latest published release tag
+        id: get_latest_release
+        uses: pozetroninc/github-action-get-latest-release@2b51d48e904071035d6632715d41966f516711dd
         with:
-          java-version: '12.x'
-      - uses: subosito/flutter-action@v1
+          repository: ${{ github.repository }}
+          excludes: prerelease, draft
+      - name: Generate changelog since last published release
+        uses: charmixer/auto-changelog-action@5c6320ae4dedc8743e4439a3c56294c294553fb9
         with:
-          flutter-version: '2.5.0'
-          channel: stable
-      - name: Build apk
+          token: ${{ GITHUB_TOKEN }}
+          future_release: ${{ github.ref }}
+          since_tag: ${{ steps.get_latest_release.outputs.release }}
+      - name: Upload changelog
+        uses: actions/upload-artifact@v2
+        with:
+          name: changelog
+          path: CHANGELOG.md
+
+  draft-release:
+    name: Draft Github release
+    needs: generate-changelog
+    runs-on: ubuntu-20.04
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
+    steps:
+      - name: Download changelog
+        uses: actions/download-artifact@v2
+        with:
+          name: changelog
+      - name: Draft release with changelog
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ GITHUB_TOKEN  }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Flutter Gallery ${{ github.ref }}
+          body_path: CHANGELOG.md
+          draft: true
+          prerelease: false
+
+  create-build:
+    name: Create ${{ matrix.target }} build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        target: [Android]
+      # Disable fail-fast as we want results from all even if one fails.
+      fail-fast: true
+    needs: draft-release
+    steps:
+      # Set up Flutter.
+      - name: Clone Flutter repository with master channel
+        uses: subosito/flutter-action@4389e6cbc6cb8a4b18c628ff96ff90be0e926aa8
+        with:
+          channel: master
+      - name: Install Android dependencies
+        if: matrix.target == 'Android'
+        uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - run: flutter doctor -v
+      # Checkout gallery code, recreate missing files, and get packages.
+      - name: Checkout gallery code
+        uses: actions/checkout@v2
+      - run: flutter create .
+      - run: flutter pub get
+
+      - name: Configure Keystore for Android
+        if: matrix.target == 'Android'
         run: |
-          flutter pub get
-          flutter format --set-exit-if-changed .
-          flutter analyze
-          flutter test
-          flutter build apk --debug
+          echo "$PLAY_STORE_UPLOAD_KEY" | base64 --decode > app/upload-keystore.jks
+          echo "storeFile=upload-keystore.jks" >> key.properties
+          echo "keyAlias=$KEYSTORE_KEY_ALIAS" >> key.properties
+          echo "storePassword=$KEYSTORE_STORE_PASSWORD" >> key.properties
+          echo "keyPassword=$KEYSTORE_KEY_PASSWORD" >> key.properties
+        env:
+          PLAY_STORE_UPLOAD_KEY: ${{ secrets.PLAY_STORE_UPLOAD_KEY }}
+          KEYSTORE_KEY_ALIAS: ${{ secrets.KEYSTORE_KEY_ALIAS }}
+          KEYSTORE_KEY_PASSWORD: ${{ secrets.KEYSTORE_KEY_PASSWORD }}
+          KEYSTORE_STORE_PASSWORD: ${{ secrets.KEYSTORE_STORE_PASSWORD }}
+        working-directory: android
+
+      # Build the application.
+      - run: flutter build -v ${{ matrix.build_target }} --release
+      - name: Rename build for Android
+        if: matrix.target == 'Android'
+        run: mv app-release.apk $GITHUB_WORKSPACE/flutter_gallery_${{ matrix.target }}.apk
+        working-directory: ${{ matrix.build_path }}
+
+      # Upload the build.
+      - name: Add packaged build to release draft
+        id: upload_release_asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ needs.draft-release.outputs.upload_url }}
+          asset_path: ./flutter_gallery_${{ matrix.target }}${{ matrix.asset_extension }}
+          asset_name: flutter_gallery_${{ matrix.target }}${{ matrix.asset_extension }}
+          asset_content_type: ${{ matrix.asset_content_type }}
