--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,11 +23,8 @@ jobs:
           flutter-version: '2.0.1'
 
       - name: Create the Keystore
-        env:
-          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
-          # import keystore from secrets
-          echo $KEYSTORE_BASE64 | base64 -d > $RUNNER_TEMP/my_production.keystore
+          echo ${{ secrets.KEYSTORE_BASE64 }} | base64 -d > $RUNNER_TEMP/my_production.keystore
 
       - name: Restore packages
         run: flutter pub get
